[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/PlatformerTileset.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CrumblingPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 2 )

[node name="Node2D" type="Sprite"]
scale = Vector2( 3, 1 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 80, 80, 64, 64 )
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="CrumbleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -34 )
shape = SubResource( 2 )

[node name="VanishTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="CrumbleTimer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="VanishTimer" to="." method="_on_VanishTimer_timeout"]
